--- a/docs/pages/machine-workload-identity/mwi-use-cases/mwi-use-cases.mdx
+++ b/docs/pages/machine-workload-identity/mwi-use-cases/mwi-use-cases.mdx
@@ -1,5 +1,5 @@
 ---
-title: Teleport Machine & Workload Identity Use Cases
+title: Machine & Workload Identity Use Cases
 description: Common use cases with Machine ID & Workload Identity
 labels:
  - how-to
