--- a/docs/pages/includes/identity-governance/azure-shell.mdx
+++ b/docs/pages/includes/identity-governance/azure-shell.mdx
@@ -1,6 +1,6 @@
 Open Azure Cloud Shell by navigating to <a href="https://shell.azure.com">shell.azure.com</a>,
 or by clicking the Cloud Shell icon in the Azure Portal. Make sure to use the bash version of Cloud Shell.
-Once a Cloud Shell instance opens, paste the generated bash script that downloads the Teleport binary in your 
+Once a Cloud Shell instance opens, paste the Teleport generated bash script that downloads the Teleport binary in your 
 Azure Shell and run the `teleport integration configure azure-oidc` command. 
 The command performs the following actions:
 - Creates an enterprise application.
@@ -19,3 +19,7 @@ Tenant ID: entra-tenant-id
 Client ID: enterprise-app-id
 Success! You can now go back to the Teleport Web UI to use the integration with Azure.
 ```
+
+Once the script is done setting up the Entra ID tenant with the necessary properties that are 
+required for the Teleport Entra ID integration, it prints out the Entra ID tenant ID
+and the client ID of the enterprise application set up by the script. 
