[tctl] Add support for debug sock endpoint with fallback in top (#56886)
* [tctl] Add support for debug sock endpoint with fallback in top

With this change `tctl top` will now attempt to connect to the local
socket debug endpoint before defaulting to the default diag addr.

If the user specifies the endpoint explicitly then the command will
always attempt the given address regardless of success. This matches
previous behavior.

The implementation is not concurrent as only two options exist, both
of which are local and not expected to have long round trips.

Closes: #56673

changelog: `tctl top` now supports the local unix sock debug endpoint.

* refactor: Simplify top address behaviour based on PR feedback

* Refactor top to reuse debug client for metrics.

* fix linting issues

* Update docs to match support for unix sockets

* Fix imports

* refactor debug service

* clean up error handling in top command

* Add footer display for addr

* Docs for diag/client

* update docs and add addr parser tests

* More docs fixes

* Fix linting after rebase

* Better godocs, more URL test cases, fixed user facing errors

* Fix err trace wrapping semantics

---------

Co-authored-by: Tim Ross <tim.ross@goteleport.com>

--- a/docs/pages/reference/cli/tctl.mdx
+++ b/docs/pages/reference/cli/tctl.mdx
@@ -1575,11 +1575,17 @@ $ tctl tokens rm [<token>]
 
 Reports diagnostic information.
 
-The diagnostic metrics endpoint must be enabled with `teleport start --diag-addr=<bind-addr>` for `tctl top` to work.
+`tctl top` can consume metrics from a HTTP diagnostic endpoint.
 
 ```code
 $ tctl top [<diag-addr>] [<refresh>]
 ```
+
+When a specific endpoint is provided, `tctl top` will always attempt to connect to it.
+The endpoint should be a valid HTTP URL, corresponding to a matching
+diagnostic metrics service configuration such as `teleport start --diag-addr=<bind-addr>`.
+
+When no endpoint is specified, `tctl top` will attempt to connect via the debug UNIX socket endpoint, falling back to localhost.
 
 ### Argument
 
@@ -1592,6 +1598,8 @@ $ tctl top [<diag-addr>] [<refresh>]
 $ sudo teleport start --diag-addr=127.0.0.1:3000
 # View stats with a refresh period of 5 seconds
 $ tctl top http://127.0.0.1:3000 5s
+# Use configured defaults
+$ tctl top
 ```
 
 ## tctl users add
