update siderbar, demo app label, and sync links from master

--- a/docs/pages/connect-your-client/model-context-protocol/mcp-access.mdx
+++ b/docs/pages/connect-your-client/model-context-protocol/mcp-access.mdx
@@ -10,8 +10,8 @@ Teleport.
 
 (!docs/pages/includes/edition-prereqs-tabs.mdx!)
 
-- The Teleport MCP Access configured. See our guides for how to set up the MCP
-  Access.
+- The Teleport MCP Access configured. See our guides for how to set up the [MCP
+  Access](../../enroll-resources/mcp-access/mcp-access.mdx).
 
 ### Step 1/2. Installation
 
