--- a/docs/pages/enroll-resources/mcp-access/dynamic-registration.mdx
+++ b/docs/pages/enroll-resources/mcp-access/dynamic-registration.mdx
@@ -1,5 +1,6 @@
 ---
 title: Dynamic MCP Server Registration
+sidebar_position: 4
 description: Register/unregister MCP servers without restarting Teleport.
 ---
 
