--- a/docs/pages/enroll-resources/mcp-access/mcp-access.mdx
+++ b/docs/pages/enroll-resources/mcp-access/mcp-access.mdx
@@ -14,11 +14,11 @@ servers while improving both access control and visibility.
 
 ## Guides
 - [MCP Access with Stdio MCP Server](./stdio.mdx): Set up a Teleport Service and enable secure access to a MCP server with stdio transport.
-- Configure MCP clients (link to be added from Gabriel's PR)
+- [Configure MCP clients](../../connect-your-client/model-context-protocol/mcp-access.mdx): How to configure MCP clients such as Claude Desktop to access MCP servers.
 
 ## Configuration & management
 - [MCP Access Controls](./rbac.mdx): Role-Based Access Control (RBAC) for Teleport MCP access.
-- [Dynamic MCP Server Registration](./dynamic-registration.mdx)
+- [Dynamic Registration](./dynamic-registration.mdx): Register/unregister MCP servers without restarting Teleport.
 
 ## Troubleshooting & support
 - [Troubleshooting MCP Access](./troubleshooting.mdx): Describes common issues and solutions for access to MCP servers.
