Resolve remaining Vale warnings
- Add "How it works" headings to 10 how-to guides.
- Remove the architecture-h2 Vale style. We will restore this as a
  `remark` linter in gravitational/docs-website#271. This linter should
  have been a `remark` linter to begin with, since otherwise it is not
  possible to ignore it with MDX comments.
- Disable the upcoming `remark` "How it works" linter for the remaining
  guides. This lets us decouple the need to add "How it works" sections
  from the need to get all Vale warnings to pass in order to add an
  automated Vale workflow that doesn't need to check pull request diffs.
- Disable the former names linter in the Azure AD guide, since we will
  update this while resolving a GitHub issue.
- Fix various minor warnings.
- Remove the step numbering linter. The plan is to convert this to a
  remark linter in gravitational/docs-website#271.

--- a/docs/pages/enroll-resources/mcp-access/troubleshooting.mdx
+++ b/docs/pages/enroll-resources/mcp-access/troubleshooting.mdx
@@ -25,7 +25,9 @@ spec:
       - "{{internal.mcp_tools}}"
 ```
 
-You can configure this user trait with `tctl`:
+You can configure this user trait with `tctl`, assigning <Var name="my_user" />
+to the name of the Teleport user you want to update:
+
 ```code
 $ tctl users update <Var name="my_user" /> --set-mcp-tools "*"
 ```
