--- a/docs/pages/connect-your-client/model-context-protocol/mcp-access.mdx
+++ b/docs/pages/connect-your-client/model-context-protocol/mcp-access.mdx
@@ -21,7 +21,9 @@ Teleport.
   
 ### Step 1/2. Installation
 
-First, sign in into your Teleport cluster using `tsh login`:
+First, sign in into your Teleport cluster using `tsh login`, assigning 
+<Var name="teleport.example.com:443" /> to the web address of the Teleport Proxy
+Service in your cluster:
 
 ```code
 $ tsh login --proxy=<Var name="teleport.example.com:443" /> --user=myuser@example.com
