--- a/docs/pages/enroll-resources/mcp-access/getting-started.mdx
+++ b/docs/pages/enroll-resources/mcp-access/getting-started.mdx
@@ -97,7 +97,7 @@ MCP server and save the configuration to `/etc/teleport.yaml`.
 
 ## Step 3/3. Connect
 
-Log in to Teleport with the user we've just created.
+Log in to Teleport with the user we've just created, <Var name="my_user" />:
 
 ```code
 $ tsh login --proxy=<Var name="teleport.example.com:443" /> --user=<Var name="my_user" />
