move Teleport as IdP from Zero Trust Access to Identity Governance

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -62,8 +62,6 @@ Get started with Teleport Access:
   credentials like Touch ID and YubiKey Bio.
 - [Integrate your Single Sign-On provider](admin-guides/access-controls/sso/sso.mdx): Allow users
   to access infrastructure resources with IdPs like Okta.
-- [Use Teleport as an identity provider](admin-guides/access-controls/idps/saml-guide.mdx) to
-  authenticate to external services.
 - [Issue and govern identities for automated
   systems](machine-workload-identity/machine-id/introduction.mdx) using Machine ID.
 
@@ -98,6 +96,7 @@ Get started with Teleport Identity:
 - [Access Monitoring](identity-governance/access-monitoring.mdx): Detect overly
   broad privileges and inspect sessions that are not using strong protection,
   such as multi-factor authentication and Device Trust.
+- [Teleport as an Identity Provider](admin-guides/access-controls/idps/saml-guide.mdx): Authenticate to external services using Teleport as your identity provider.
 
 ### Teleport Policy
 
