docs: Update database access session recording reference with interactive sessions playback (#57010)
* docs(db): add examples of postgres session playback

* docs(db): code review suggestions

--- a/docs/pages/reference/architecture/session-recording.mdx
+++ b/docs/pages/reference/architecture/session-recording.mdx
@@ -196,6 +196,10 @@ SSH and Kubernetes sessions can be played in Teleport's Web UI or by using
 the [`tsh play`](../cli/tsh.mdx) command. Desktop session
 recordings can only be played back in the Web UI.
 
+PostgreSQL database sessions can also be played using [`tsh play`](../cli/tsh.mdx)
+and the Web UI. Sessions from all database protocols are accessible with
+[`tsh play`](../cli/tsh.mdx) in JSON format (`--format json`).
+
 In the Web UI, the session recordings page is populated by querying Teleport's
 audit log for session end events, which contain metadata about the recording.
 This is sometimes surprising to Teleport users, because even though the recordings
