post-Travis discussion - edits for TileGrid

--- a/docs/pages/machine-workload-identity/mwi-use-cases/mwi-ci-cd.mdx
+++ b/docs/pages/machine-workload-identity/mwi-use-cases/mwi-ci-cd.mdx
@@ -14,28 +14,28 @@ Teleport natively integrates with many CI/CD providers and deployment targets. R
 <TileGrid
   tiles={[
     {
-      icon: <Icon name="azure-devops" size="xl" />,
-      to: "../machine-id/deployment/azure-devops",
+      icon: <Icon name="azureDevops" size="xl" />,
+      to: "/machine-workload-identity/machine-id/deployment/azure-devops",
       name: "Azure DevOps",
     },
     {
       icon: <Icon name="bitbucket" size="xl" />,
-      to: "../machine-id/deployment/bitbucket",
+      to: "/machine-workload-identity/machine-id/deployment/bitbucket",
       name: "BitBucket",
     },
     {
       icon: <Icon name="circleci" size="xl" />,
-      to: "../machine-id/deployment/circleci",
+      to: "/machine-workload-identity/machine-id/deployment/circleci",
       name: "CircleCI",
     },
     {
-      icon: <Icon name="gitlab-ci" size="xl" />,
-      to: "../machine-id/deployment/gitlab",
+      icon: <Icon name="gitlab" size="xl" />,
+      to: "/machine-workload-identity/machine-id/deployment/gitlab",
       name: "GitLab CI",
     },
     {
       icon: <Icon name="jenkins" size="xl" />,
-      to: "../machine-id/deployment/jenkins",
+      to: "/machine-workload-identity/machine-id/deployment/jenkins",
       name: "Jenkins",
     }
   ]}
