Remove version variables from prerequisites
Backports #56768

Including version variables such as `(=teleport.version=)` in the
Prerequisites section of how-to guides can confuse users, since it can
imply that the user needs a later version of Teleport than they run,
even when they do not need the most recent version.

- Restructure `edition-prereqs-tabs.mdx`. Remove the `version`
  parameter, which currently has the `teleport.version` variable as its
  default value.
- In `edition-prereqs-tabs.mdx`, tell the user how to get the version of
  their cluster before having them install client tools so they're not
  always installing the most recent tools.
- Edit existing assignments of the `version` parameter in
  `edition-prereqs-tabs.mdx` to fit the new design of
  `edition-prereqs-tabs.mdx`. With the plugin the docs engine uses for
  partials, it is not currently possible to have an optional parameter
  with an empty value, so we'll need to use the `edition` parameter.
  While this approach is not ideal, applying it consistently allows us
  to change it once we introduce more ergonomic partial loading.
- Edit how-to guide prerequisites in guides that do not include
  `edition-prereqs-tabs.mdx` to remove Teleport version variables and
  mentions of unsupported versions (v14 and below). If it is trivial to
  do so, add `edition-prereqs-tabs.mdx` to these pages, since it
  contains versioning information. Otherwise, do not include the partial
  in these pages.
- Add hardcoded versions to Prerequisites sections in features
  introduced by supported versions of Teleport (v16-v18).

Includes responses to feedback by zmb3 and greedy52.

--- a/docs/pages/enroll-resources/desktop-access/active-directory.mdx
+++ b/docs/pages/enroll-resources/desktop-access/active-directory.mdx
@@ -20,33 +20,15 @@ Azure Active Directory.
 
 To complete the steps in this guide, verify your environment meets the following requirements:
 
-- Access to a running Teleport cluster, `tctl` admin tool, and `tsh` client tool
-  version >= (=teleport.version=).
-
-  You can verify the tools you have installed by running the following commands:
-
-  ```code
-  $ tctl version
-  # Teleport Enterprise v(=teleport.version=) go(=teleport.golang=)
-
-  $ tsh version
-  # Teleport v(=teleport.version=) go(=teleport.golang=)
-  ```
-
-  You can download these tools by following the appropriate [Installation
-  instructions](../../installation/linux.mdx) for the Teleport
-  edition you use.
+(!docs/pages/includes/edition-prereqs-tabs.mdx!)
 
 - A Linux server to run the Teleport Windows Desktop Service.
   You can use an existing server that runs the Teleport Agent for other resources.
-
 - An Active Directory domain that is configured for LDAPS. Because Teleport requires an
   encrypted LDAP connection, you should verify that your domain uses Active Directory
   Certificate Services or a non-Microsoft certification authority (CA) to issue LDAPS
   certificates.
-
 - Administrative access to a domain controller.
-
 - (!docs/pages/includes/tctl.mdx!)
 
 ## Option 1: Automated configuration
