--- a/docs/pages/identity-security/access-graph/self-hosted.mdx
+++ b/docs/pages/identity-security/access-graph/self-hosted.mdx
@@ -14,8 +14,8 @@ This guide will help you set up the service and enable Access Graph in your Tele
 
 ## Prerequisites
 
-- A running Teleport Enterprise cluster v14.3.6 or later.
-- An updated `license.pem` with Identity Security enabled.
+- A running Teleport Enterprise cluster.
+- An updated Teleport Enterprise license file with Teleport Identity Security enabled.
 - Docker version v(=docker.version=) or later.
 - A PostgreSQL database server v14 or later.
   - Access Graph needs a dedicated [database](https://www.postgresql.org/docs/current/sql-createdatabase.html) to store its data.
