--- a/docs/pages/machine-workload-identity/machine-workload-identity.mdx
+++ b/docs/pages/machine-workload-identity/machine-workload-identity.mdx
@@ -5,7 +5,7 @@ labels:
  - mwi
 ---
 
-Teleport Zero Trust Access & Flexible Workload Identity offers two complementary types of identity for non-human entities in your infrastructure:
+Teleport Machine & Workload Identity offers two complementary sets of capabilities for non-human entities in your infrastructure:
 
 - **Zero Trust Access for machines**: 
 Enables machines (like CI/CD pipelines) to securely authenticate with your Teleport cluster to access protected resources and configure the cluster itself.
