--- a/docs/pages/machine-workload-identity/mwi-use-cases/mwi-ci-cd.mdx
+++ b/docs/pages/machine-workload-identity/mwi-use-cases/mwi-ci-cd.mdx
@@ -50,7 +50,7 @@ in the GitHub Actions configuration:
 - An AWS keypair
 - A Kubernetes config file
 
-Best practices recommend rotating these secrets every six months. The platform team generates new credentials and shares them with the development team, 
+Best practices recommend rotating these secrets every six months. A platform team generates new credentials and shares them with a development team, 
 who must manually update the repository. Although the credential generation process emits a security log, teams often lack a reliable way to correlate 
 it with GitHub's audit logs to verify timely rotation. Sharing credentials via Slack, email, file drops, or password managers adds further risk. 
 Moreover, exposing the Kubernetes API to the internet introduces unnecessary surface area for attack.
