post-feedback edits

--- a/docs/pages/machine-workload-identity/mwi-use-cases/mwi-ci-cd.mdx
+++ b/docs/pages/machine-workload-identity/mwi-use-cases/mwi-ci-cd.mdx
@@ -2,7 +2,7 @@
 title: CI/CD with Machine & Workload Identity
 description: Configuring CI/CD with Machine & Workload Identity
 labels:
- - how-to
+ - conceptual
  - mwi
 ---
 
