--- a/docs/pages/machine-workload-identity/mwi-use-cases/mwi-use-cases.mdx
+++ b/docs/pages/machine-workload-identity/mwi-use-cases/mwi-use-cases.mdx
@@ -2,7 +2,7 @@
 title: Machine & Workload Identity Use Cases
 description: Common use cases with Machine ID & Workload Identity
 labels:
- - how-to
+ - conceptual
  - mwi
 ---
 
@@ -13,7 +13,7 @@ all managed through Teleport's unified access plane.
 
 A [CI/CD system](../mwi-use-cases/mwi-ci-cd.mdx) securely deploys services to Kubernetes and establishes secure communication channels between them:
 
-- The pipeline authenticates through the proxy to deploy to Kubernetes and receives credentials to interact with cloud APIs (e.g., to push container images)
+- The pipeline authenticates through the [Teleport Proxy Service](../../reference/architecture/architecture.mdx#teleport-proxy-service) to deploy to Kubernetes and receives credentials to interact with cloud APIs (e.g., to push container images)
 - Services deployed by the pipeline receive SPIFFE identities for mutual TLS. The pipeline manages the identity lifecycle for the services it deploys
 
 ## Cloud-native application with third-party API access
@@ -29,7 +29,7 @@ A Kubernetes-based application needs access to both internal services and extern
 
 A [Zero Trust strategy](../workload-identity/getting-started.mdx) is applied across workloads and automation:
 
-- Automation scripts authenticate through the proxy to perform infrastructure tasks
+- Automation scripts authenticate through the Teleport Proxy Service to perform infrastructure tasks
 - Workloads authenticate using short-lived, cryptographically verifiable identities
 - Security teams use Teleport’s unified audit logs to trace all identity activity
 
@@ -39,5 +39,5 @@ Zero-trust, identity-based communication without shared secrets are rotated auto
 
 Instead of managing static credentials (e.g., API keys, database passwords), workloads authenticate using short-lived X.509 certificates or JWTs compatible with the SPIFFE/SPIRE standard.
 
-- The service issues new identities to workloads on a regular schedule, dynamically issued by Teleport’s Auth Service and rotate automatically
+- The service issues new identities to workloads on a regular schedule, dynamically issued by Teleport's Auth Service and rotate automatically
 - All identity issuance and usage is recorded in audit logs
