--- a/docs/pages/machine-workload-identity/mwi-use-cases/mwi-use-cases.mdx
+++ b/docs/pages/machine-workload-identity/mwi-use-cases/mwi-use-cases.mdx
@@ -31,7 +31,7 @@ A [Zero Trust strategy](../workload-identity/getting-started.mdx) is applied acr
 
 - Automation scripts authenticate through the Teleport Proxy Service to perform infrastructure tasks
 - Workloads authenticate using short-lived, cryptographically verifiable identities
-- Security teams use Teleport’s unified audit logs to trace all identity activity
+- Security teams use Teleport's unified audit logs to trace all identity activity
 
 ## Identity-based communication without shared secrets
 
