Respond to hugoShaka feedback
- Correct the "How it works" section in the Headless WebAuthn guide.
- Expand the "How it Works" section in the EKS, AKS, and GKE deployment
  guides.
- Add a clarification to the "How it works" section of the agentless SSH
  guide.

--- a/docs/pages/admin-guides/access-controls/guides/dual-authz.mdx
+++ b/docs/pages/admin-guides/access-controls/guides/dual-authz.mdx
@@ -38,7 +38,7 @@ Request. The plugin then manages updates in a third-party communication
 platform, in this case, Mattermost. Users can then approve and deny Access
 Requests by following a message link.
 
-![The Mattermost Access Request plugin](../../../img/enterprise/plugins/mattermost/diagram.png)
+![The Mattermost Access Request plugin](../../../../img/enterprise/plugins/mattermost/diagram.png)
 
 ## Prerequisites
 
