--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/gcp.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/gcp.mdx
@@ -31,6 +31,8 @@ following resources, which we show you how to create in this guide:
   receive TLS credentials from Let's Encrypt. To do so, the Proxy Service
   completes the [ACME DNS-01
   challenge](https://letsencrypt.org/docs/challenge-types/#dns-01-challenge).
+- **Teleport Auth Service backend components:** A Google Cloud Storage bucket and
+  Firestore database.
 
 ## Prerequisites
 
