--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/aws.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/aws.mdx
@@ -30,6 +30,8 @@ requires the following resources, which we show you how to create in this guide:
   `cert-manager`, AWS Certificate Manager, and your own TLS credentials.
   Depending on the method you choose, you may also need to create IAM
   permissions to allow the provisioning system to interact with AWS APIs.
+- **Amazon S3 bucket and DynamoDB database** for the Teleport Auth Service
+  backend.
 
 ## Prerequisites
 
