--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/azure.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/azure.mdx
@@ -35,6 +35,8 @@ following resources, which we show you how to create in this guide:
   receive TLS credentials from Let's Encrypt. To do so, the Proxy Service
   completes the [ACME DNS-01
   challenge](https://letsencrypt.org/docs/challenge-types/#dns-01-challenge).
+- **Teleport Auth Service backend components:** PostgreSQL database and an
+  Amazon S3-compatible object storage solution.
 
 ## Prerequisites
 
