--- a/docs/pages/zero-trust-access/infrastructure-as-code/managing-resources/agentless-ssh-servers.mdx
+++ b/docs/pages/zero-trust-access/infrastructure-as-code/managing-resources/agentless-ssh-servers.mdx
@@ -23,7 +23,8 @@ nodes. Once you have configured your SSH nodes to trust the Teleport certificate
 authority for OpenSSH (see the [Agentless OpenSSH
 guide](../../../enroll-resources/server-access/openssh/openssh-agentless.mdx),
 the Proxy Service can present a Teleport-signed certificate to the node and
-establish a connection.
+establish a connection. For this to work, the Teleport Proxy Service must be
+able to dial the node.
 
 Agentless SSH servers are registered with the Teleport Auth Service as resources
 stored on the Auth Service backend. The Teleport Auth Service exposes a gRPC API
